--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -4,6 +4,6 @@
 <div class="text-center mt-5">
     <h1>404</h1>
     <p>Página no encontrada 😕</p>
-    <a href="{{ url_for('index') }}" class="btn btn-dark">Volver al inicio</a>
+    <a href="{{ url_for('dashboard.index') }}" class="btn btn-dark">Volver al inicio</a>
 </div>
 {% endblock %}
