--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -4,6 +4,6 @@
 <div class="text-center mt-5">
     <h1>500</h1>
     <p>Ocurrió un error interno en el servidor ⚠️</p>
-    <a href="{{ url_for('index') }}" class="btn btn-dark">Volver al inicio</a>
+    <a href="{{ url_for('dashboard.index') }}" class="btn btn-dark">Volver al inicio</a>
 </div>
 {% endblock %}
