SCRUM-31 Delete "summary" view
SCRUM-31 I deleted the summary view from the base.html because we didn't
see the way it would improve our demo.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -22,6 +22,9 @@
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('expenses.expenses_list') }}">Gastos</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('expenses.debts_list') }}">Deudas</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('expenses.summary') }}">Resumen</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('new_expense') }}">Nuevo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('expenses_list') }}">Gastos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('debts_list') }}">Deudas</a></li>
                 </ul>
                 <span class="navbar-text me-3">👤 {{ session['username'] }}</span>
                 <a href="{{ url_for('auth.logout') }}" class="btn btn-outline-light btn-sm">Cerrar sesión</a>
