--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Página no encontrada{% endblock %}
+{% block title %}Back to home{% endblock %}
 {% block content %}
 <div class="text-center mt-5">
     <h1>404</h1>
-    <p>Página no encontrada 😕</p>
-    <a href="{{ url_for('index') }}" class="btn btn-dark">Volver al inicio</a>
+    <p>Page not found</p>
+    <a href="{{ url_for('dashboard.index') }}" class="btn btn-dark">Back to home</a>
 </div>
 {% endblock %}
