--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Error del servidor{% endblock %}
+{% block title %}Server Error{% endblock %}
 {% block content %}
 <div class="text-center mt-5">
     <h1>500</h1>
-    <p>Ocurrió un error interno en el servidor ⚠️</p>
-    <a href="{{ url_for('index') }}" class="btn btn-dark">Volver al inicio</a>
+    <p>HM... Unfortunately, the server crashed. Apologies </p>
+    <a href="{{ url_for('dashboard.index') }}" class="btn btn-dark">Back to Home</a>
 </div>
 {% endblock %}
