--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,23 +1,23 @@
 {% extends "base.html" %}
-{% block title %}Iniciar sesión{% endblock %}
+{% block title %}Log In{% endblock %}
 {% block content %}
 <div class="row justify-content-center mt-5">
     <div class="col-md-5">
         <div class="card shadow">
             <div class="card-header bg-dark text-white text-center">
-                <h4>Inicio de sesión</h4>
+                <h4>Log In</h4>
             </div>
             <div class="card-body">
                 <form method="POST">
                     <div class="mb-3">
-                        <label for="username" class="form-label">Usuario</label>
+                        <label for="username" class="form-label">Username</label>
                         <input type="text" name="username" id="username" class="form-control" required>
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Contraseña</label>
+                        <label for="password" class="form-label">Password</label>
                         <input type="password" name="password" id="password" class="form-control" required>
                     </div>
-                    <button class="btn btn-dark w-100">Iniciar sesión</button>
+                    <button class="btn btn-dark w-100">Log In</button>
                 </form>
             </div>
         </div>
